--- a/requirements.txt
+++ b/requirements.txt
@@ -98,3 +98,29 @@ QtPy==1.2.1
 redis==2.10.5
 requests==2.12.4
 rope-py3k==0.9.4.post1
+scipy==0.18.1
+seaborn==0.7.1
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.10.0
+snowballstemmer==1.2.1
+sockjs-tornado==1.0.3
+Sphinx==1.5.1
+spyder==3.1.2
+SQLAlchemy==1.1.5
+statsmodels==0.6.1
+sympy==1.0
+tables==3.3.0
+terminado==0.6
+toolz==0.8.2
+tornado==4.4.2
+traitlets==4.3.1
+unicodecsv==0.14.1
+wcwidth==0.1.7
+Werkzeug==0.11.15
+widgetsnbextension==1.2.6
+wrapt==1.10.8
+xlrd==1.0.0
+XlsxWriter==0.9.6
+xlwings==0.10.2
+xlwt==1.2.0
